<resources>
    <string name="app_name">Fridge Butler</string>
    <string name="unit_text">Unit Amount</string>
    <string name="add_title">Add Item</string>
    <string name="edit_title">Edit Item</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_category">(Create New Category)</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="date_added">Date Added</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="unit">Unit</string>
</resources>
