<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="com.example.foodtracker3.DatabaseHelper" />
        <import type="java.util.Date" />
        <import type="java.time.Instant" />
        <variable name="editProduct" type="com.example.foodtracker3.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/standardBackground"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/iv_deleteCategory"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:tooltipText="@string/cancel"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.997"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintVertical_bias="0.06999999"
            app:srcCompat="@drawable/ic_delete2" />

        <ImageView
            android:id="@+id/iv_cancelNewCategory"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tooltipText="@string/cancel"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintVertical_bias="0.089999974"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <EditText
            android:id="@+id/et_newCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="60dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/create_new_category"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:maxLength="20"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintVertical_bias="0.050000012" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/date_added"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantityTextInputLayout"
            app:layout_constraintVertical_bias="0.122">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_dateAdded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
                android:longClickable="false"
                android:minEms="6"
                android:text='@{DatabaseHelper.date_toAppStr( (editProduct == null) ? Date.from(Instant.now()) : editProduct.add_date) }'
                android:textColor="@android:color/black"
                android:textColorHint="?android:attr/textColorHintInverse"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expirationInputLayout"
            app:layout_constraintVertical_bias="0.146" />

        <Spinner
            android:id="@+id/category_input"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="55dp"
            android:spinnerMode="dropdown"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/add_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintVertical_bias="0.113" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/unitAmountInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="10dp"
            android:hint="Unit Amt."
            app:boxStrokeColor="@color/colorPrimary"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/quantityTextInputLayout"

            app:layout_constraintEnd_toStartOf="@+id/unit_input"

            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/quantityTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/unitAmount_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="4"
                android:minEms="4"
                android:selectAllOnFocus="true"
                android:text='@{(editProduct == null) ? "1" : java.lang.Integer.toString((int)editProduct.unit_amount)}'
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_black"
            android:text="@{(editProduct == null) ? @string/add_title : @string/edit_title}"
            android:textColor="@color/ColorHomeIcon"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/name"
            app:hintAnimationEnabled="false"
            app:boxStrokeColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text"
            app:layout_constraintVertical_bias="0.075">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:selectAllOnFocus="true"
                android:maxLength="30"
                android:text='@{(editProduct == null) ? "" : editProduct.name}'
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantityTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:hint="@string/quantity"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout"
            app:layout_constraintVertical_bias="0.101">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="4"
                android:inputType="number"
                android:maxLength="4"
                android:selectAllOnFocus="true"
                android:text='@{(editProduct == null) ? "1" : java.lang.Integer.toString(editProduct.quantity)}'
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expirationInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginEnd="20dp"

            android:hint="@string/expiration_date"
            app:boxStrokeColor="@color/colorPrimary"
            app:hintAnimationEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dateInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/unitAmountInputLayout"
            app:layout_constraintVertical_bias="0.12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_expirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:inputType="none"
                android:longClickable="false"
                android:minEms="6"
                android:text='@{(editProduct == null || editProduct.expiration_date == null) ? " " : DatabaseHelper.date_toAppStr(editProduct.expiration_date) }'
                android:textColor="@android:color/black"
                android:textColorHint="?android:attr/textColorHintInverse"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancel_button"
            style="@style/CustomPinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cancel"
            android:visibility='@{(editProduct == null) ? View.GONE : View.VISIBLE}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintVertical_bias="0.69" />

        <Button
            android:id="@+id/add_button"
            style="@style/CustomGoldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/add"
            android:visibility='@{(editProduct == null) ? View.VISIBLE : View.GONE}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintVertical_bias="0.694" />

        <Button
            android:id="@+id/save_button"
            style="@style/CustomGoldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/save"
            android:visibility='@{(editProduct == null) ? View.GONE : View.VISIBLE}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text"
            app:layout_constraintVertical_bias="0.694" />

        <Spinner
            android:id="@+id/unit_input"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginEnd="20dp"
            android:dropDownWidth="70dp"
            android:minWidth="105dp"
            android:spinnerMode="dropdown"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/expirationInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout"
            app:layout_constraintVertical_bias="0.69" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
